--- a/web_tech_lab/experiment_1/biodata.html
+++ b/web_tech_lab/experiment_1/biodata.html
@@ -3,9 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bio Data</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+        }
+        .bio-data {
+            margin: 20px auto;
+            max-width: 600px;
+            padding: 20px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+        h1 {
+            color: #333;
+        }
+        table {
+            width: 100%;
+        }
+        th, td {
+            padding: 8px;
+            text-align: left;
+        }
+    </style>
 </head>
 <body>
-    
+    <div class="bio-data">
+        <h1>My Bio Data</h1>
+        <ul>
+            <li><strong>Name:</strong> RAHUL SILONIYA</li>
+            <li><strong>Date of Birth:</strong> October 24, 2002</li>
+            <li><strong>Address:</strong> 221B Baker Street, London</li>
+            <li><strong>Email:</strong> mail@me.com</li>
+        </ul>
+        <table>
+            <tr>
+                <th>Education</th>
+                <th>Year</th>
+                <th>Institution</th>
+            </tr>
+            <tr>
+                <td>Bachelor's Degree</td>
+                <td>2021-2025</td>
+                <td>National Institute of Technology, Kurukshetra</td>
+            </tr>
+            <tr>
+                <td>High School/Diploma</td>
+                <td>2019-2020</td>
+                <td>Kendriya Vidyalaya Karnal</td>
+            </tr>
+        </table>
+    </div>
 </body>
 </html>
